navbar spacing problem fix

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@200;300;400;500;600;700;800&display=swap");
 
 :root {
-  --primary-font: "Plus Jakarta Sans", sans-serif;
+  --primary-font: "Plus Jakarta Sans", sans-serif;  
   --primary-col: #2b6cf5;
   --secondary-col: #204289;
   --white-col: #fff;
@@ -43,7 +43,7 @@ a {
   padding: 4px;
 }
 .header .nav-item {
-  margin-right: 5px;
+  margin-right: 4px;   
 }
 .header .nav-item .nav-link {
   font-size: 1.5rem;
